# Mike

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  bootstrap.ps1  bootstrap.sh  install_splunk_app.ps1  pyproject.toml
ima/: asset_memory.py  cli.py  config.py  kvstore.py  mcp_server.py  splunk_client.py
ima/commands/: alerts.py  auth.py  demo.py  knowledge.py  kv.py  mcp.py
ima/llm/: foundation_sec.py
splunk_app/ima/: README.md
splunk_app/ima/README/: inputs.conf.spec
splunk_app/ima/default/: app.conf  collections.conf  commands.conf  inputs.conf  savedsearches.conf  transforms.conf
splunk_app/ima/default/data/ui/nav/: default.xml
splunk_app/ima/default/data/ui/views/: ima_overview.xml
