[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ima"
version = "0.1.0"
description = "Institutional Memory Agent - a Splunk-native knowledge graph built from SOC analyst behavior."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "splunk-sdk>=2.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
ima = "ima.cli:app"

[tool.setuptools.packages.find]
include = ["ima*"]
