[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ima"
version = "0.1.0"
description = "A Splunk-native agent that turns SOC analyst reasoning into a queryable institutional knowledge graph, accessible from SPL, a Python CLI, and a Model Context Protocol server."
authors = [
    {name = "Shiwani Mishra"},
    {name = "Saurabh Gupta"},
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "splunk-sdk>=2.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
ima = "ima.cli:app"

[tool.setuptools.packages.find]
include = ["ima*"]
